welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:1: error: Missing closing brace `}' assumed here
do{
^Poucet:7: error: ';' expected but 'while' found.
  		} while(!crossing());
                  ^Poucet:17: error: 'while' expected but '}' found.
}
^